--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.6",
     "bootstrap": "5.2.2",
     "bootstrap-icons": "^1.9.1",
+    "moment": "^2.29.4",
     "next": "12.3.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "eslint": "8.26.0",
