--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.6",
+    "axios": "^1.1.3",
     "bootstrap": "5.2.2",
     "bootstrap-icons": "^1.9.1",
     "moment": "^2.29.4",
@@ -17,6 +18,7 @@
     "next-pwa": "^5.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.38.0",
     "swr": "^1.3.0"
   },
   "devDependencies": {
