--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.4",
+    "@heroicons/react": "^2.0.13",
     "axios": "^1.1.3",
     "moment": "^2.29.4",
     "next": "13.0.4",
@@ -21,7 +22,10 @@
     "swr": "^1.3.0"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.13",
     "eslint": "8.26.0",
-    "eslint-config-next": "13.0.4"
+    "eslint-config-next": "13.0.4",
+    "postcss": "^8.4.19",
+    "tailwindcss": "^3.2.4"
   }
 }
