--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
     "@headlessui/react": "^1.7.4",
     "@heroicons/react": "^2.0.13",
     "axios": "^1.1.3",
+    "bcrypt": "^5.1.0",
+    "graphql": "^16.6.0",
+    "graphql-request": "^5.0.0",
     "moment": "^2.29.4",
     "next": "13.0.4",
+    "next-auth": "^4.18.0",
     "next-pwa": "^5.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
