--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "@headlessui/react": "^1.7.4",
     "@heroicons/react": "^2.0.13",
+    "@lottiefiles/react-lottie-player": "^3.5.0",
+    "@next-auth/dgraph-adapter": "^1.0.4",
+    "airtable": "^0.11.6",
     "axios": "^1.1.3",
     "bcrypt": "^5.1.0",
     "graphql": "^16.6.0",
@@ -23,13 +26,17 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.38.0",
     "react-hot-toast": "^2.4.0",
+    "react-query": "^3.39.2",
     "swr": "^1.3.0"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^2.16.1",
+    "@graphql-codegen/client-preset": "^1.2.3",
     "autoprefixer": "^10.4.13",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.4",
     "postcss": "^8.4.19",
-    "tailwindcss": "^3.2.4"
+    "tailwindcss": "^3.2.4",
+    "typescript": "^4.9.4"
   }
 }
