--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bcrypt": "^5.1.0",
     "graphql": "^16.6.0",
     "graphql-request": "^5.0.0",
+    "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "next": "13.0.4",
     "next-auth": "^4.18.0",
