--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-hook-form": "^7.38.0",
     "react-hot-toast": "^2.4.0",
     "react-query": "^3.39.2",
+    "sharp": "^0.31.2",
     "swr": "^1.3.0"
   },
   "devDependencies": {
