--- a/package.json
+++ b/package.json
@@ -9,12 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.4.4",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
     "@headlessui/react": "^1.7.4",
     "@heroicons/react": "^2.0.13",
     "@lottiefiles/react-lottie-player": "^3.5.0",
     "airtable": "^0.11.6",
     "axios": "^1.1.3",
     "bcrypt": "^5.1.0",
+    "flowbite": "^1.5.5",
+    "flowbite-react": "^0.3.7",
+    "framer-motion": "^6",
     "graphql": "^16.6.0",
     "graphql-request": "^5.0.0",
     "lodash": "^4.17.21",
@@ -26,6 +32,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.38.0",
     "react-hot-toast": "^2.4.0",
+    "react-icons": "^4.7.1",
     "react-query": "^3.39.2",
     "sharp": "^0.31.2",
     "swr": "^1.3.0"
